syntax = "proto3";

package gitfs;

message RpcRepository {
  int64 id = 1;
  string uid = 2;
  string owner = 6;
  string name = 3;
  string namespace = 4;
  bool is_private = 5;
}

message RpcSignature {
  string name = 1;
  string email = 2;
  int64 time = 3;
}


message RpcCommit {
  string hash = 1;
  string message = 2;
  RpcSignature author = 3;
  RpcSignature committer = 6;
  repeated string parents = 9;
  string tree = 10;
  string gpgsig = 11;
}

message RpcTag {
  string id = 1;
  string object_hash = 2;
  string object_type = 3;
  string tag_name = 4;
  RpcSignature tagger = 5;
  string message = 6;
}

enum RpcTreeItemMode {
  UNKNOWN = 0;
  BLOB = 1;
  BLOB_EXECUTABLE = 2;
  TREE = 3;
  COMMIT = 4;
  LINK = 5;
}

message RpcTreeItem {
  RpcTreeItemMode mode = 1;
  string id = 2;
  string name = 3;
}

message RpcTree {
  string id = 1;
  repeated RpcTreeItem tree_items = 2;
}

message RpcRefs {
  RpcRepository repository = 1;
  string name = 2;
  string full_name = 3;
  string hash = 4;
  RpcRefsType type = 5;
  bool is_default = 6;
}


enum RpcRefsType {
  NoneRefs = 0;
  BRANCH = 1;
  TAG = 2;
  NOTE = 3;
  REMOTE = 4;
}